--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,1 +1,29 @@
-test
+version: '3.1'
+
+services:
+
+  # db:
+  #   image: mysql
+  #   # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
+  #   # (this is just an example, not intended to be a production configuration)
+  #   command: --default-authentication-plugin=mysql_native_password
+  #   restart: always
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: example
+
+  app:
+    image: node
+    restart: always
+    working_dir: /app
+    volumes:
+      - ./src:/app
+    ports:
+      - 80:3000
+    command: "npm run start"
+
+ 
+  # adminer:
+  #   image: adminer
+  #   restart: always
+  #   ports:
+  #     - 8080:8080
