--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -10,7 +10,8 @@
   "author": "BIBI",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
