--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend-app",
   "version": "1.0.0",
   "description": "Superbe backend pour les DI",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
-    "start": "nodemon main.js",
+    "start": "nodemon src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "BIBI",
