Avec des commentaires c'est mieux!

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 BACKEND_URL="backend.groupeX.learn-it.ovh"
 FRONTEND_URL="frontend.groupeX.learn-it.ovh"
+ADMIN_URL="groupeX.learn-it.ovh"
+MONGO_INITDB_ROOT_USERNAME="userExample"
+MONGO_INITDB_ROOT_PASSWORD="passwordExample"
